Add new constant

--- a/script.html
+++ b/script.html
@@ -22,6 +22,7 @@
         const SAINTP_DELIVERY_PRICE = 450;
         const DELIVERY_INCREASE = 50;
         const PICKUP = 100;
+        const FOREIGN_DIFFERENCE = 10;
         // DOM-элементы
         const popup = document.querySelector(".t706__cartwin");
         const priceElem = popup.querySelector(".t706__cartwin-totalamount-info");
@@ -59,14 +60,14 @@
               deliveryPrice = PICKUP;
               break;
             case "за границу":
-              deliveryPrice = 10;
+              deliveryPrice = FOREIGN_DIFFERENCE;
               break;
           }
 
           order.delivery.price = deliveryPrice;
 
-          if (deliveryPrice === 10) {
-            order.amount = order.prodamount + deliveryPrice - 10
+          if (deliveryPrice === FOREIGN_DIFFERENCE) {
+            order.amount = order.prodamount + deliveryPrice - FOREIGN_DIFFERENCE
           } else {
             order.amount = order.prodamount + deliveryPrice
           }
@@ -76,7 +77,7 @@
                   ? `${deliveryPrice.toLocaleString().split(",").join(" ")} р.`
                   : " индивидуально";
 
-          totalSum.querySelector('input').value = deliveryPrice !== 10 ? deliveryPrice : 'индивидуально'
+          totalSum.querySelector('input').value = deliveryPrice !== FOREIGN_DIFFERENCE ? deliveryPrice : 'индивидуально'
 
           document.querySelector('.t706__cartwin-totalamount').innerText =
               `${order.amount.toLocaleString().split(',').join(' ')} р.`
